package at.qe.skeleton.model;

public enum OrderStatus {
    NEW,
    IN_PROGRESS,
    DONE
}
